--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ p{
   color: #C2C5DB;
 }
 .purple{
-  color:#9F78FF;
+  color:#3A4F41;
 }
 .price{
   display: block;
@@ -106,22 +106,22 @@ a{
   color: #1D2547;
 }
 a:hover{
-  color: #9F78FF;
+  color: #3A4F41;
 }
 .primaryCTA{
     display: inline-block;
     width: fit-content;
     padding: 1.5% 3%;
-    border: 1px solid #9F78FF;
-    background-color: #9F78FF;
+    border: 1px solid #3A4F41;
+    background-color: #3A4F41;
     border-radius: 15px 0 15px 0;
     color: white;
     margin: 10px 0;
 }
 .primaryCTA:hover{
   color: white;
-  background-color: #a493e4;
-  border: 1px solid #a493e4;
+  background-color: #3A4F41;
+  border: 1px solid #3A4F41;
 }
 
 /* Logos and Icons*/
@@ -132,7 +132,7 @@ a:hover{
 }
 
 .cart{
-  background-color: #9F78FF;
+  background-color: #3A4F41;
 }
 
 /*lists*/
@@ -188,8 +188,8 @@ header{
   justify-content: center;
   width: 50px;
   height: 50px;
-  color: #9F78FF;
-  border: 1px solid #9F78FF;
+  color: #3A4F41;
+  border: 1px solid #3A4F41;
   border-radius: 50%;
   margin: 5px
 }
@@ -263,14 +263,14 @@ header{
 .imgBoxLeft{
  grid-column-start: 1; 
  min-height: 500px;
- background: #e1dbdb;
- box-shadow: 30px -40px #9F78FF;
+ background: #DEC3BE;
+ box-shadow: 30px -40px #D5A18E;
 }
 .imgBoxRight{
   grid-column-start: 2; 
   min-height: 800px;
   background: #e1dbdb;
-  box-shadow: -30px 40px #9F78FF, 10px 40px #9F78FF;
+  box-shadow: -30px 40px #d5a18e, 10px 40px #d5a18e;
  }
 .contentBox{
   display: flex;
@@ -286,7 +286,7 @@ header{
 }
 
 footer{
-  background: #1c2546;
+  background: #2b3b30;
   color: #C2C5DB;
   padding: 3%;
 }
@@ -317,8 +317,8 @@ footer{
 
 }
 
-/*Image Grid*/
-.imageGrid{
+/*Product Image Grid*/
+.productImageGrid{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 25% .25%;
@@ -410,7 +410,7 @@ Backgrounds
   background-position: top;
 }
 .brown{
-  background-color: #FDECEF;
+  background-color: #E1DEE3;
 }
 .gray{
   background-color: #c5d6ea;
